--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 plugins {
     id("java")
+    id 'org.springframework.boot' version '3.2.4'
+
 }
 
 group = "org.example"
 version = "1.0-SNAPSHOT"
+apply plugin: 'io.spring.dependency-management'
+
 
 repositories {
     mavenCentral()
@@ -11,9 +15,11 @@ repositories {
 
 dependencies {
     implementation("org.projectlombok:lombok:1.18.28")
+    implementation 'org.testng:testng:7.1.0'
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter'
 
 }
 
